[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the ENC28J60 (Ethernet controller)"
documentation = "https://docs.rs/enc28j60"
keywords = ["embedded-hal-driver", "Ethernet", "SPI"]
license = "MIT OR Apache-2.0"
name = "enc28j60"
readme = "README.md"
repository = "https://github.com/japaric/enc28j60"
version = "0.2.1"

[dependencies]
cast = { version = "0.3.0", default-features = false}
embedded-hal = { version = "0.2.5", features = ["unproven"] }
byteorder = { version = "1.4.3", default-features = false }
